# zedgi-python

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: bump_version.py  release.sh
zedgi/: __init__.py  client.py  crypto.py  memcached.py  mysql.py  postgres.py  queue.py  redis.py
